[package]
name = "transactions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
csv = "1.3.0"
once_cell = "1.19.0"
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"

[dev-dependencies]
test-case = "3.3.1"
